--- a/index.html
+++ b/index.html
@@ -15,12 +15,64 @@
     <link rel="stylesheet" href="https://npm-assets.fiverrcdn.com/assets/layout/macan-semibold.d147812.woff2">
     <link rel="stylesheet" href="https://npm-assets.fiverrcdn.com/assets/layout/macan-bold.502483a.woff2">
 
+    <!-- Bootstrap 4.6 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
 <body>
+    <!-- Header -->
+    <header></header>
+
+    <!-- navbar -->
+    <nav></nav>
+
+    <!-- Carousel -->
+    <section class="carousel"></section>
+
+    <!-- services -->
+    <section class="services"></section>
+
+    <!-- business -->
+    <seciton class="business"></seciton>
+
+    <!-- feedback -->
+    <section class="feedback"></section>
+
+    <!-- logoMaker -->
+    <section class="logoMaker"></section>
+
+    <!-- projects -->
+    <section class="projects"></section>
+
+    <!-- guides -->
+    <section class="guides"></section>
+
+    <!-- banner -->
+    <section class="banner"></section>
+
+    <!-- categories -->
+    <section class="categories"></section>
+
+    <!-- footer -->
+    <footer></footer>
+
+
+
+
+
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 
 </body>
 
